# mpi-mm

./: .gitignore  CMakeLists.txt  mpi_mm.c  mpi_mm_blocking.c  mpi_mm_non_blocking.c
.run/: lab4-cygwin.run.xml  lab4-wsl.run.xml  mpi_mm_cygwin.run.xml  mpi_mm_wsl.run.xml
